bk_ida/gccida/g0/expand_inline_function
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1121:6: error: use of undeclared identifier 'v10'
rtx *v10; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1122:6: error: use of undeclared identifier 'v11'
rtx *v11; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1123:6: error: use of undeclared identifier 'v12'
rtx *v12; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1130:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v19; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1131:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1134:6: error: use of undeclared identifier 'v23'
rtx *v23; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1139:4: error: expected ';' after expression
rtx temp; // [rsp+40h] [rbp-160h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1139:5: error: use of undeclared identifier 'temp'
rtx temp; // [rsp+40h] [rbp-160h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1140:4: error: expected ';' after expression
rtx stack_save; // [rsp+48h] [rbp-158h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1140:5: error: use of undeclared identifier 'stack_save'
rtx stack_save; // [rsp+48h] [rbp-158h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1141:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+54h] [rbp-14Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1143:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pmode; // [rsp+64h] [rbp-13Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1144:4: error: expected ';' after expression
rtx stack_slot; // [rsp+68h] [rbp-138h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1144:5: error: use of undeclared identifier 'stack_slot'
rtx stack_slot; // [rsp+68h] [rbp-138h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1145:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode_0; // [rsp+74h] [rbp-12Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1147:4: error: expected ';' after expression
rtx copyimag; // [rsp+80h] [rbp-120h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1147:5: error: use of undeclared identifier 'copyimag'
rtx copyimag; // [rsp+80h] [rbp-120h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1148:4: error: expected ';' after expression
rtx copyreal; // [rsp+88h] [rbp-118h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/integrate.c:1148:5: error: use of undeclared identifier 'copyreal'
rtx copyreal; // [rsp+88h] [rbp-118h] 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_inline_function/src/obj/integrate.o] Error 1
